--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
   <head>
+  <title>Frogs</title>
   </head>
+  <nav>
+  
+  </nav>
   <body>
+  <header>
     <h1>Frogs</h1>
+	</header>
+	<a href="Glass.html"><div style="background-color: green"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Cochranella_susatamai03.jpg"  width="475"><div><txt>Glass Frog</txt></div></div>
   </body>
 </html>
