--- a/index.html
+++ b/index.html
@@ -1,14 +1,55 @@
 <html>
   <head>
   <title>Frogs</title>
+  <style>
+	
+	h1 {font-size: 300%; text-align: center;}
+	
+	p {font-size: 150%; padding: 15px;}
+	
+	txt {font-size: 16pt;}
+	
+	img {padding: 3px; border: 3px black solid; border-radius: 3px}
+	
+	div {padding: 30px; margin: 5%; border: 4px solid black;}
+	
+	footer {background-color: #DDDDDD; margin: 0px; padding: 10px;}
+	
+	body {font-family: Arial, Helvetica, sans-serif;}
+	
+	</style>
   </head>
-  <nav>
-  
-  </nav>
   <body>
   <header>
-    <h1>Frogs</h1>
+    <div>
+	<h1>Frogs</h1>
+	
+	<nav>
+	
+	<a href="Glass.html">
+		<b><txt> Glass Frog </txt>
+	</a>
+	 
+	<a href="Tree.html">
+		<txt> Tree Frog </txt></b>
+	</a>
+	</div>
+	</nav>
 	</header>
-	<a href="Glass.html"><div style="background-color: green"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e3/Cochranella_susatamai03.jpg"  width="475"><div><txt>Glass Frog</txt></div></div>
+	<div>
+	<section>
+	<p>Frogs are amphibians. They eat bugs and swim around.</p>
+	</section>
+	<a href="Glass.html"><img src="https://i.ytimg.com/vi/upRGJ3qme0w/maxresdefault.jpg" height="200"></img></a>
+	<a href="Tree.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Red-eyed_tree_frog_Lapa_Rios.JPG/1280px-Red-eyed_tree_frog_Lapa_Rios.JPG" height="200"></img></a>
+	</div>
+	<footer>
+	<address>
+	Charlie Heberer<br>
+	Hannah Angely<br>
+	Lars Swenson<br>
+	Wei Zenk<br>
+	</address>
+	</footer>
   </body>
 </html>
