--- a/Glass.html
+++ b/Glass.html
@@ -1,46 +1,56 @@
 <html>
-	<head>
-	<title>Glass Frog</title>
-	<style>
+  <head>
+  <title>Frogs</title>
+  <style>
 	
-	h1 {font-size: 48pt; text-align: center}
+	h1 {font-size: 300%; text-align: center;}
 	
-	p {font-size: 20pt; padding: 15px}
+	p {font-size: 150%; padding: 15px;}
 	
-	img {padding: 15px}
+	txt {font-size: 16pt;}
 	
-	div {padding: 30px; margin: 5%; border: 4px solid black}
+	img {padding: 3px; border: 3px black solid; border-radius: 3px}
 	
+	div {padding: 30px; margin: 5%; border: 4px solid black;}
 	
-	footer {background-color: #DDDDDD; padding: 10px}
+	footer {background-color: #DDDDDD; margin: 0px; padding: 10px;}
+	
+	body {font-family: Arial, Helvetica, sans-serif;}
 	
 	</style>
-	</head>
-	<body>
-<nav>
-		<a href="index.html">Home</a>
-	</nav>	
-	<div>
-		<h1>Glass Frog</h1>
-		<img src="https://static.nationalgeographic.co.uk/files/styles/image_3200/public/stockpkg_mm9598_31_crop.jpg?w=1600&h=900" alt="Transparent Underbelly" width="475" style="float: right">
-		
-		<p>Glass Frogs are amphibians from the Centrolenidae family of the Anura order, which is Greek for “without tail”. There are over 5,000 species of frogs worldwide and they exist on every continent except Antarctica.</p>
-		<p>While most of their skin is lime green, underneath they’re translucent, clearly revealing their heart, liver and gastrointestinal tract. No biology class would need to dissect a glass frog! Their translucent legs act as camouflage with surrounding leaves where they hide and lay their eggs.</p>
-		<p>Glass Frogs are 1-3 inches and are arboreal, meaning they live in trees. They are nocturnal, only coming out to mate when it rains. They are communal, have a lifespan of up to 14 years and can jump over 10 feet. Their predators include birds, snakes and small mammals, as well as wasps, which prey on their eggs. They eat crickets, moths, flies, spiders and other small frogs.</p>
-		
-		<img src="https://i.ytimg.com/vi/upRGJ3qme0w/maxresdefault.jpg" width="475" alt="Kermit" style="float: left">
+  </head>
+  <body>
+  <header>
+    <div>
+	<a href="index.html"><h1>Frogs</h1></a>
 	
-		<p>First witnessed and described in 1872 in Ecuador, they’re mostly found in the Central and South American nations Costa Rica, Panama, Venezuela, Colombia and Peru. The biggest threat to their existence is deforestation of rainforests. Their origin and evolution began in South America.</p>
-		<p>In Costa Rica in 2015, a new species of Glass Frog was discovered for the first time since 1973, Hyalinobatrachium Dinae. This particular frog bears a striking resemblance to the Muppets character Kermit the Frog!  </p>
+	<nav>
+	
+	<a href="Glass.html">
+		<b><txt> Glass Frog </txt>
+	</a>
+	 
+	<a href="Tree.html">
+		<txt> Tree Frog </txt></b>
+	</a>
 	</div>
-
-	<footer>	
-		<h2>References:</h2>	
-		https://en.wikipedia.org/wiki/Glass_frog<br>
-		https://a-z-animals.com/animals/glass-frog/<br>
-		https://www.livescience.com/50548-kermit-the-frog-look-alike-discovered.html<br>
-		https://www.smithsonianmag.com/smart-news/scientists-discover-reason-behind-glass-frogs-translucent-skin-180974979/<br>
-		https://www.frogpets.com/top-16-weirdest-frogs-toads/<br>
+	</nav>
+	</header>
+	
+	<div>
+	<section>
+	<p>Frogs are amphibians. They eat bugs and swim around.</p>
+	</section>
+	<a href="Glass.html"><img src="https://i.ytimg.com/vi/upRGJ3qme0w/maxresdefault.jpg" height="200"></img></a>
+	<a href="Tree.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Red-eyed_tree_frog_Lapa_Rios.JPG/1280px-Red-eyed_tree_frog_Lapa_Rios.JPG" height="200"></img></a>
+	</div>
+	<footer>
+	<address>
+	Charlie Heberer<br>
+	Hannah Angely<br>
+	Lars Swenson<br>
+	Wei Zenk<br>
+	</address>
 	</footer>
-	</body>
+  </body>
 </html>
