--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
   <header>
     <div>
-	<h1>Frogs</h1>
+	<a href="index.html"><h1>Frogs</h1></a>
 	
 	<nav>
 	
@@ -36,6 +36,7 @@
 	</div>
 	</nav>
 	</header>
+	
 	<div>
 	<section>
 	<p>Frogs are amphibians. They eat bugs and swim around.</p>
