Update Intro Text
Moved first paragraph from Glass Frog

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	
 	<div>
 	<section>
-	<p>Frogs are amphibians. They eat bugs and swim around.</p>
+		<p>Frogs are amphibians from the Centrolenidae family of the Anura order, which is Greek for “without tail”. There are over 5,000 species of frogs worldwide and they exist on every continent except Antarctica.</p>
 	</section>
 	<a href="Glass.html"><img src="https://i.ytimg.com/vi/upRGJ3qme0w/maxresdefault.jpg" height="200"></img></a>
 	<a href="Tree.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Red-eyed_tree_frog_Lapa_Rios.JPG/1280px-Red-eyed_tree_frog_Lapa_Rios.JPG" height="200"></img></a>
