--- a/Glass.html
+++ b/Glass.html
@@ -41,7 +41,7 @@
 		<img src="https://static.nationalgeographic.co.uk/files/styles/image_3200/public/stockpkg_mm9598_31_crop.jpg?w=1600&h=900" alt="Transparent Underbelly" width="475" style="float: right">
 		
 	
-		<p>While most of their skin is lime green, underneath they’re translucent, clearly revealing their heart, liver and gastrointestinal tract. No biology class would need to dissect a glass frog! Their translucent legs act as camouflage with surrounding leaves where they hide and lay their eggs.</p>
+		<p>While most of the glass frogs skin is lime green, underneath they’re translucent, clearly revealing their heart, liver and gastrointestinal tract. No biology class would need to dissect a glass frog! Their translucent legs act as camouflage with surrounding leaves where they hide and lay their eggs.</p>
 		<p>Glass Frogs are 1-3 inches and are arboreal, meaning they live in trees. They are nocturnal, only coming out to mate when it rains. They are communal, have a lifespan of up to 14 years and can jump over 10 feet. Their predators include birds, snakes and small mammals, as well as wasps, which prey on their eggs. They eat crickets, moths, flies, spiders and other small frogs.</p>
 		
 		<img src="https://i.ytimg.com/vi/upRGJ3qme0w/maxresdefault.jpg" width="475" alt="Kermit" style="float: left">
