Added Hannah's introduction
and restored Lars' essay to add the introduction again

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 	
 	<div>
 	<section>
-		<p>Frogs are amphibians from the Centrolenidae family of the Anura order, which is Greek for “without tail”. There are over 5,000 species of frogs worldwide and they exist on every continent except Antarctica.</p>
+		<p>Frogs are captivting and fun animals. Everyone know what a frog looks like, but they do not always know how interesting they are.
+      Frogs are amphibians that are known for their jumping abilities, croaking sounds, bulging eyes and slimy skin. 
+      They live all over the world and are among the most diverse animals in the world
+      Frogs encompass over 6,000 species in the world. 
+      We will focus on two main species: the Glass Frog and the Tree Frog.</p>
 	</section>
 	<a href="Glass.html"><img src="https://i.ytimg.com/vi/upRGJ3qme0w/maxresdefault.jpg" height="200"></img></a>
 	<a href="Tree.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Red-eyed_tree_frog_Lapa_Rios.JPG/1280px-Red-eyed_tree_frog_Lapa_Rios.JPG" height="200"></img></a>
